feat: 홈화면 조회 API에 주차 정보 추가